# pjson_editor

./: .clangd  .gitignore  CMakeLists.txt  build_wasm.sh  build_wasm_simple.sh  test_set_scene_transition  test_set_scene_transition.cpp  verify_wasm_setup.sh  wasm_bindings.cpp  wasm_bindings_fixed.cpp
PJsonEditor/: CMakeLists.txt  CMakeLists.txt.wasm  CMakeLists.wasm.txt  build_wasm.sh
PJsonEditor/include/pjson_editor/: ApiMessage.h  ExtendedAPI.h  ExtendedModels.h  TranscriptUtils.h  pjson_editor.hpp
PJsonEditor/src/: ApiMessage.cpp  ControllerAPI.cpp  DataStore.cpp  main_extended.cpp  pjson_editor.cpp  wasm_bindings.cpp  wasm_bindings_simple.cpp  wasm_test.cpp
PJsonEditor/tests/: api_request_client.hpp  http_client.hpp  test_addscene_doctest.cpp  test_all_operations.cpp  test_business_logic.cpp  test_extended_models.cpp  test_merge_scenes_logic.cpp  test_merge_simple.cpp  test_scene.cpp  test_tier1_apis.cpp  test_wasm_readiness.cpp
PJsonEditor/tests/impl/: server_login.cpp
cmake/: PJsonEditorConfig.cmake.in
demo/: index.html  index_real.html  pjson_cli.js  pjson_cli.wasm  pjson_editor_web.js  pjson_editor_web.wasm  test_all_operations.js  test_all_operations.wasm  test_business_logic.js  test_business_logic.wasm  test_extended_models.js  test_extended_models.wasm  test_merge_scenes_logic.js  test_merge_scenes_logic.wasm  test_merge_simple.js  test_merge_simple.wasm  test_tier1_apis.js  test_tier1_apis.wasm
docs/: API_Parity_Mapping.md  AddFootage_Business_Logic_Comparison.md  Business_Logic_Alignment_Report.md  FINAL_IMPLEMENTATION_SUMMARY.md  IMPLEMENTATION_SUMMARY.md  Progress_Summary.md  README.md  WebAssembly_Implementation_Guide.md
example/: CMakeLists.txt  README.md  main.cpp  main_optional.cpp
